--- a/index.html
+++ b/index.html
@@ -201,14 +201,14 @@
     https://cdn.jsdelivr.net/npm/locomotive-scroll@4.1.4/dist/locomotive-scroll.min.js
     "></script>
     <script>
-        const scroller = new LocomotiveScroll({
-            el: document.querySelector("[data-scroll-container]"),
-            smooth: true,
-        });
-
-        new ResizeObserver(() => locoScroll.update()).observe(
-            document.querySelector("[data-scroll-container]")
-        );
+       let locoScroll;
+locoScroll = new LocomotiveScroll({
+  el: document.querySelector("[data-scroll-container]"),
+  smooth: true,
+});
+new ResizeObserver(() => locoScroll.update()).observe(
+  document.querySelector("[data-scroll-container]")
+);
     </script>
 
 
