--- a/index.html
+++ b/index.html
@@ -44,6 +44,10 @@
 
     <div class="noise"></div>
     <main class="fg-7" data-scroll-container>
+
+        <div class="page-1-www">
+
+        
         <div class="page-1">
             <div class="page-1-wrapper www d-flex flex-column gap-5">
                 <div class="header-wrapper mt-2 fg-4 rounded-1 padding-1" data-aos="fade-up" data-aos-delay="0">
@@ -74,22 +78,25 @@
                 <div class="grid-1">
                     <div class="gg-1">
                         <div class="typo-wrapper-1 d-flex flex-column text-center">
-                            <h1 class="display-2">Medium length hero headline goes&NonBreakingSpace;here</h1>
+                            <h1 class="display-2" data-aos="fade-up" data-aos-delay="600">Medium length hero headline
+                                goes&NonBreakingSpace;here</h1>
                             <div class="p-wrapper d-flex justify-content-center">
-                                <p class="">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Omnis voluptatem,
+                                <p class="" data-aos="fade-up" data-aos-delay="700">Lorem ipsum, dolor sit amet
+                                    consectetur adipisicing elit. Omnis voluptatem,
                                     nesciunt accusamus placeat eaque quod!</p>
                             </div>
 
                             <div class="cta-button-3 cb-2 d-flex flex-row justify-content-center">
-                                <button class="btn-1"><a href="http://" rel="noopener noreferrer">Buy</a></button>
-                                <button class="btn-2"><a href="http://"
+                                <button class="btn-1" data-aos="fade-up" data-aos-delay="800"><a href="http://"
+                                        rel="noopener noreferrer">Buy</a></button>
+                                <button class="btn-2" data-aos="fade-up" data-aos-delay="900"><a href="http://"
                                         rel="noopener noreferrer">Whitepaper</a></button>
                             </div>
                         </div>
                     </div>
                     <div class="gg-2">
                         <div class="img-wrapper d-flex justify-content-center" data-aos="zoom-out-up"
-                            data-aos-delay="500" data-aos-duration="500">
+                            data-aos-delay="1000" data-aos-duration="500">
                             <img data-scroll data-scroll-speed="2" class="g1 img-fluid" src="./assets/images/g1.png"
                                 alt="">
                         </div>
@@ -98,6 +105,7 @@
 
             </div>
         </div>
+
 
         <div class="page-2">
             <div class="page-2-wrapper www">
@@ -134,7 +142,9 @@
 
             </div>
         </div>
+    </div>
 
+    <div class="page-2-www">
 
         <div class="page-3 py-10">
             <div class="page-3-wrapper www">
@@ -142,7 +152,7 @@
                     <div class="about-flex text-center">
                         <img class="komainu img-fluid" src="./assets/images/komainu.png" alt="">
                         <div class="p-wrapper-4">
-                            <p>
+                            <p class="mb-0">
                                 Lorem ipsum dolor sit amet consectetur adipisicing elit. Saepe id totam eligendi modi
                                 illum, facere voluptatum error dicta. Ducimus numquam quod aut voluptatem id earum
                                 aperiam quas minima maiores autem nobis accusamus eligendi iure omnis dolor voluptates
@@ -159,20 +169,52 @@
             </div>
         </div>
 
-        <div class="page-4">
-            <div class="page-4-wrapper www">
-                <div class="tokenomics-wrapper fg-4 rounded-2">
-                    <div class="grid-2">
-                        <div class="t-1 rounded-1 fg-4 bg-opacity-75 d-flex flex-column">
-                            <h1>Buy <span>8%</span> </h1>
+
+        <div class="page-6 my-5 test">
+            <div class="page-6-wrapper www">
+                <div class="whitepaper text-center">
+                    <div class="kamo-typo d-flex flex-column align-items-center text-center">
+                        <h1>Kamowhitepaper</h1>
+                        <div class="p-wrapper-7">
+                            <p>Check out our detailed Kamowhitepaper™ <br>to learn more about Kamoinu's inner workings.
+                            </p>
                         </div>
-                        <div class="t-2 rounded-1 bg-opacity-75 d-flex flex-column">
-                            <h1>Sell <span>8%</span> </h1>
+
+                        <div class="cta-button-3">
+                            <button class="btn-1"><a href="http://" rel="noopener noreferrer">Checkout</a></button>
+                        </div>
+                    </div>
+
+                    <div class="kamo-img">
+                        <img class="ktp img-fluid" src="./assets/images/ktp-1.png" alt="" srcset="">
+                    </div>
+
+                </div>
+
+            </div>
+        </div>
+
+
+
+        <!-- <div class="page-4 py-20">
+            <div class="page-4-wrapper www">
+                <div class="page-4-wrapper-wrapper">
+                    <h1>Tokenomics</h1>
+                    <div class="p-wrapper-5">
+                    </div>
+                <div class="tokenomics-wrapper bg-2 rounded-2 p-2">
+                    <div class="grid-2">
+                        <div class="t-1 p-1 rounded-1 bg-2 d-flex flex-column">
+                            <h1 class="display-7">Buy: <span>8%</span> </h1>
+                        </div>
+                        <div class="t-2 p-1 rounded-1 bg-2 d-flex flex-column">
+                            <h1 class="display-7">Sell: <span>8%</span> </h1>
                         </div>
                     </div>
                 </div>
+                </div>
             </div>
-        </div>
+        </div> -->
 
         <div class="page-5 fg-8 pt-2 pb-1">
             <div class="page-5-wrapper www text-center">
@@ -185,6 +227,7 @@
                 <small>Copyright © 2023 – KOMAINU | All Rights Reserved</small>
             </div>
         </div>
+    </div>
 
     </main>
 
@@ -201,14 +244,14 @@
     https://cdn.jsdelivr.net/npm/locomotive-scroll@4.1.4/dist/locomotive-scroll.min.js
     "></script>
     <script>
-       let locoScroll;
-locoScroll = new LocomotiveScroll({
-  el: document.querySelector("[data-scroll-container]"),
-  smooth: true,
-});
-new ResizeObserver(() => locoScroll.update()).observe(
-  document.querySelector("[data-scroll-container]")
-);
+        let locoScroll;
+        locoScroll = new LocomotiveScroll({
+            el: document.querySelector("[data-scroll-container]"),
+            smooth: true,
+        });
+        new ResizeObserver(() => locoScroll.update()).observe(
+            document.querySelector("[data-scroll-container]")
+        );
     </script>
 
 
