--- a/index.html
+++ b/index.html
@@ -54,7 +54,8 @@
                     <header class="d-flex flex-row justify-content-between align-items-center">
 
                         <div class="logo" data-aos="fade-up" data-aos-delay="100">
-                            <img src="/assets/images/logo/logo.png" class="logo-img" alt="">
+                                                      <img src="./assets/images/logo/logo.png" class="logo-img" alt="">
+
                         </div>
 
                         <div class="d-flex align-items-center flex-row gap-2 menu" data-aos="fade-up"
