--- a/index.html
+++ b/index.html
@@ -40,164 +40,172 @@
 
 </head>
 
-<body>
+<body id="body">
 
     <div class="noise"></div>
     <main class="fg-7" data-scroll-container>
 
         <div class="page-1-www">
 
-        
-        <div class="page-1">
-            <div class="page-1-wrapper www d-flex flex-column gap-5">
-                <div class="header-wrapper mt-2 fg-4 rounded-1 padding-1" data-aos="fade-up" data-aos-delay="0">
-                    <header class="d-flex flex-row justify-content-between align-items-center">
 
-                        <div class="logo" data-aos="fade-up" data-aos-delay="100">
-                                                      <img src="./assets/images/logo/logo.png" class="logo-img" alt="">
+            <div class="page-1">
+                <div class="page-1-wrapper www d-flex flex-column gap-5">
+                    <div class="header-wrapper mt-2 fg-4 rounded-1 padding-1" data-aos="fade-up" data-aos-delay="0">
+                        <header class="d-flex flex-row justify-content-between align-items-center">
 
-                        </div>
-
-                        <div class="d-flex align-items-center flex-row gap-2 menu" data-aos="fade-up"
-                            data-aos-delay="200">
-                            <nav class="d-flex flex-row gap-1" data-aos="fade-up" data-aos-delay="300">
-                                <li data-aos="fade-up" data-aos-delay="350"><a href="http://" target="_blank"
-                                        rel="noopener noreferrer">Socials</a></li>
-                                <li data-aos="fade-up" data-aos-delay="400"><a href="http://" target="_blank"
-                                        rel="noopener noreferrer">Utility</a></li>
-                                <li data-aos="fade-up" data-aos-delay="450"><a href="http://" target="_blank"
-                                        rel="noopener noreferrer">Tokenomics</a></li>
-                            </nav>
-
-                            <div class="cta-button" data-aos="fade-up" data-aos-delay="500">
-                                <button class="btn-1"><a href="http://" rel="noopener noreferrer">Buy</a></button>
-                            </div>
-                        </div>
-                    </header>
-                </div>
-
-                <div class="grid-1">
-                    <div class="gg-1">
-                        <div class="typo-wrapper-1 d-flex flex-column text-center">
-                            <h1 class="display-2" data-aos="fade-up" data-aos-delay="600">Medium length hero headline
-                                goes&NonBreakingSpace;here</h1>
-                            <div class="p-wrapper d-flex justify-content-center">
-                                <p class="" data-aos="fade-up" data-aos-delay="700">Lorem ipsum, dolor sit amet
-                                    consectetur adipisicing elit. Omnis voluptatem,
-                                    nesciunt accusamus placeat eaque quod!</p>
+                            <div class="logo" data-aos="fade-up" data-aos-delay="100">
+                                <img src="./assets/images/logo/logo.png" class="logo-img" alt="">
                             </div>
 
-                            <div class="cta-button-3 cb-2 d-flex flex-row justify-content-center">
-                                <button class="btn-1" data-aos="fade-up" data-aos-delay="800"><a href="http://"
-                                        rel="noopener noreferrer">Buy</a></button>
-                                <button class="btn-2" data-aos="fade-up" data-aos-delay="900"><a href="http://"
-                                        rel="noopener noreferrer">Whitepaper</a></button>
+                            <div class="d-flex align-items-center flex-row gap-2 menu" data-aos="fade-up"
+                                data-aos-delay="200">
+                                <nav class="d-flex flex-row gap-1" data-aos="fade-up" data-aos-delay="300">
+                                    <li data-aos="fade-up" data-aos-delay="350"><a href="http://" target="_blank"
+                                            rel="noopener noreferrer">Socials</a></li>
+                                    <li data-aos="fade-up" data-aos-delay="400"><a href="http://" target="_blank"
+                                            rel="noopener noreferrer">Utility</a></li>
+                                    <li data-aos="fade-up" data-aos-delay="450"><a href="http://" target="_blank"
+                                            rel="noopener noreferrer">Tokenomics</a></li>
+                                </nav>
+
+                                <div class="cta-button" data-aos="fade-up" data-aos-delay="500">
+                                    <button class="btn-1"><a href="http://" rel="noopener noreferrer">Buy</a></button>
+                                </div>
+                            </div>
+                        </header>
+                    </div>
+
+                    <div class="grid-1">
+                        <div class="gg-1">
+                            <div class="typo-wrapper-1 d-flex flex-column text-center">
+                                <h1 class="display-2" data-aos="fade-up" data-aos-delay="600">Medium length hero
+                                    headline
+                                    goes&NonBreakingSpace;here</h1>
+                                <div class="p-wrapper d-flex justify-content-center">
+                                    <p class="" data-aos="fade-up" data-aos-delay="700">Lorem ipsum, dolor sit amet
+                                        consectetur adipisicing elit. Omnis voluptatem,
+                                        nesciunt accusamus placeat eaque quod!</p>
+                                </div>
+
+                                <div class="cta-button-3 cb-2 d-flex flex-row justify-content-center">
+                                    <button class="btn-1" data-aos="fade-up" data-aos-delay="800"><a href="http://"
+                                            rel="noopener noreferrer">Buy</a></button>
+                                    <button class="btn-2" data-aos="fade-up" data-aos-delay="900"><a href="http://"
+                                            rel="noopener noreferrer">Whitepaper</a></button>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="gg-2">
+                            <div class="img-wrapper d-flex justify-content-center" data-aos="zoom-out-up"
+                                data-aos-delay="1000" data-aos-duration="500">
+                                <img data-scroll data-scroll-speed="2" class="g1 img-fluid" src="./assets/images/g1.png"
+                                    alt="">
                             </div>
                         </div>
                     </div>
-                    <div class="gg-2">
-                        <div class="img-wrapper d-flex justify-content-center" data-aos="zoom-out-up"
-                            data-aos-delay="1000" data-aos-duration="500">
-                            <img data-scroll data-scroll-speed="2" class="g1 img-fluid" src="./assets/images/g1.png"
-                                alt="">
+
+                </div>
+            </div>
+
+
+            <div class="page-2">
+                <div class="page-2-wrapper www">
+
+                    <div class="f-wrapper py-5" data-scroll data-scroll-speed="1">
+                        <div
+                            class="fg-4 rounded-2 d-flex ff-flex flex-row align-items-center justify-content-center p-3 gap-3">
+                            <div class="f-1 d-flex flex-column">
+                                <img class="f-icon" src="" alt="">
+                                <h1 class="display-7">Medium Length Section</h1>
+                                <div class="p-wrapper-3">
+                                    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Incidunt totam quis
+                                    voluptates
+                                    dolorum voluptas. Odio.
+                                </div>
+                            </div>
+                            <div class="f-2 d-flex flex-column">
+                                <img class="f-icon" src="" alt="">
+                                <h1 class="display-7">Medium Length Section</h1>
+                                <div class="p-wrapper-3">
+                                    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Incidunt totam quis
+                                    voluptates
+                                    dolorum voluptas. Odio.
+                                </div>
+                            </div>
+                            <div class="f-3 d-flex flex-column">
+                                <img class="f-icon" src="" alt="">
+                                <h1 class="display-7">Medium Length Section</h1>
+                                <div class="p-wrapper-3">
+                                    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Incidunt totam quis
+                                    voluptates
+                                    dolorum voluptas. Odio.
+                                </div>
+                            </div>
                         </div>
                     </div>
-                </div>
 
+
+                </div>
             </div>
         </div>
 
+        <div class="page-2-www">
 
-        <div class="page-2">
-            <div class="page-2-wrapper www">
+            <div class="page-3 py-10">
+                <div class="page-3-wrapper www">
+                    <div class="about-wrapper d-flex flex-column justify-content-center align-items-center">
+                        <div class="about-flex text-center">
+                            <img class="komainu img-fluid" src="./assets/images/komainu.png" alt="">
+                            <div class="p-wrapper-4">
+                                <p class="mb-0">
+                                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Saepe id totam eligendi
+                                    modi
+                                    illum, facere voluptatum error dicta. Ducimus numquam quod aut voluptatem id earum
+                                    aperiam quas minima maiores autem nobis accusamus eligendi iure omnis dolor
+                                    voluptates
+                                    ullam, quis adipisci.
 
-                <div class="f-wrapper w-100 py-5" data-scroll data-scroll-speed="1">
-                    <div class="fg-4 rounded-2 d-flex flex-row align-items-center justify-content-center p-3 gap-3">
-                        <div class="f-1 d-flex flex-column">
-                            <img class="f-icon" src="" alt="">
-                            <h1 class="display-7">Medium Length Section</h1>
-                            <div class="p-wrapper-3">
-                                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Incidunt totam quis voluptates
-                                dolorum voluptas. Odio.
-                            </div>
-                        </div>
-                        <div class="f-2 d-flex flex-column">
-                            <img class="f-icon" src="" alt="">
-                            <h1 class="display-7">Medium Length Section</h1>
-                            <div class="p-wrapper-3">
-                                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Incidunt totam quis voluptates
-                                dolorum voluptas. Odio.
-                            </div>
-                        </div>
-                        <div class="f-3 d-flex flex-column">
-                            <img class="f-icon" src="" alt="">
-                            <h1 class="display-7">Medium Length Section</h1>
-                            <div class="p-wrapper-3">
-                                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Incidunt totam quis voluptates
-                                dolorum voluptas. Odio.
+                                    <br><br>
+                                    Lorem ipsum dolor sit amet consectetur, adipisicing elit. Tenetur consequatur
+                                    quibusdam
+                                    dicta distinctio doloribus quo voluptates vero dolorum dolore laudantium.
+                                </p>
                             </div>
                         </div>
                     </div>
+
                 </div>
-
-
             </div>
-        </div>
-    </div>
-
-    <div class="page-2-www">
-
-        <div class="page-3 py-10">
-            <div class="page-3-wrapper www">
-                <div class="about-wrapper d-flex flex-column justify-content-center align-items-center">
-                    <div class="about-flex text-center">
-                        <img class="komainu img-fluid" src="./assets/images/komainu.png" alt="">
-                        <div class="p-wrapper-4">
-                            <p class="mb-0">
-                                Lorem ipsum dolor sit amet consectetur adipisicing elit. Saepe id totam eligendi modi
-                                illum, facere voluptatum error dicta. Ducimus numquam quod aut voluptatem id earum
-                                aperiam quas minima maiores autem nobis accusamus eligendi iure omnis dolor voluptates
-                                ullam, quis adipisci.
-
-                                <br><br>
-                                Lorem ipsum dolor sit amet consectetur, adipisicing elit. Tenetur consequatur quibusdam
-                                dicta distinctio doloribus quo voluptates vero dolorum dolore laudantium.
-                            </p>
-                        </div>
-                    </div>
-                </div>
-
-            </div>
-        </div>
 
 
-        <div class="page-6 my-5 test">
-            <div class="page-6-wrapper www">
-                <div class="whitepaper text-center">
-                    <div class="kamo-typo d-flex flex-column align-items-center text-center">
-                        <h1>Kamowhitepaper</h1>
-                        <div class="p-wrapper-7">
-                            <p>Check out our detailed Kamowhitepaper™ <br>to learn more about Kamoinu's inner workings.
-                            </p>
+            <div class="page-6 my-5 test">
+                <div class="page-6-wrapper www">
+                    <div class="whitepaper text-center">
+                        <div class="kamo-typo d-flex flex-column align-items-center text-center">
+                            <h1>Kamowhitepaper</h1>
+                            <div class="p-wrapper-7">
+                                <p>Check out our detailed Kamowhitepaper™ <br>to learn more about Kamoinu's inner
+                                    workings.
+                                </p>
+                            </div>
+
+                            <div class="cta-button-3">
+                                <button class="btn-1"><a href="http://" rel="noopener noreferrer">Checkout</a></button>
+                            </div>
                         </div>
 
-                        <div class="cta-button-3">
-                            <button class="btn-1"><a href="http://" rel="noopener noreferrer">Checkout</a></button>
+                        <div class="kamo-img">
+                            <img class="ktp img-fluid" src="./assets/images/ktp-1.png" alt="" srcset="">
                         </div>
-                    </div>
 
-                    <div class="kamo-img">
-                        <img class="ktp img-fluid" src="./assets/images/ktp-1.png" alt="" srcset="">
                     </div>
 
                 </div>
-
             </div>
-        </div>
 
 
 
-        <!-- <div class="page-4 py-20">
+            <!-- <div class="page-4 py-20">
             <div class="page-4-wrapper www">
                 <div class="page-4-wrapper-wrapper">
                     <h1>Tokenomics</h1>
@@ -217,18 +225,18 @@
             </div>
         </div> -->
 
-        <div class="page-5 fg-8 pt-2 pb-1">
-            <div class="page-5-wrapper www text-center">
-                <div class="mb-1 footer-icons d-flex flex-row gapping justify-content-center align-items-center">
-                    <a href="http://" target="_blank" rel="noopener noreferrer"> <img
-                            src="./assets/images/icons/telegram.svg" alt="" srcset=""></a>
-                    <a href="http://" target="_blank" rel="noopener noreferrer"> <img
-                            src="./assets/images/icons/twitter.svg" alt="" srcset=""></a>
+            <div class="page-5 fg-8 pt-2 pb-1">
+                <div class="page-5-wrapper www text-center">
+                    <div class="mb-1 footer-icons d-flex flex-row gapping justify-content-center align-items-center">
+                        <a href="http://" target="_blank" rel="noopener noreferrer"> <img
+                                src="./assets/images/icons/telegram.svg" alt="" srcset=""></a>
+                        <a href="http://" target="_blank" rel="noopener noreferrer"> <img
+                                src="./assets/images/icons/twitter.svg" alt="" srcset=""></a>
+                    </div>
+                    <small>Copyright © 2023 – KOMAINU | All Rights Reserved</small>
                 </div>
-                <small>Copyright © 2023 – KOMAINU | All Rights Reserved</small>
             </div>
         </div>
-    </div>
 
     </main>
 
@@ -253,8 +261,19 @@
         new ResizeObserver(() => locoScroll.update()).observe(
             document.querySelector("[data-scroll-container]")
         );
-    </script>
 
+
+
+    </script>
+    <script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
+    <script type="text/javascript">
+        $(document).ready(function () {
+            setTimeout(function () {
+                alert('Reloading Page');
+                location.reload(true);
+            }, 5000);
+        });
+    </script>
 
 
     <!-- js -->
