--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
     <!-- css -->
     <link rel="stylesheet" href="assets/css/main.css">
 
-
+    <script src="https://kit.fontawesome.com/c396c66dc6.js" crossorigin="anonymous"></script>
 
 </head>
 
@@ -71,7 +71,7 @@
                                 </nav>
 
                                 <div class="cta-button" data-aos="fade-up" data-aos-delay="500">
-                                    <button class="btn-1"><a href="http://" rel="noopener noreferrer">Buy</a></button>
+                                    <button class="btn-1"><a href="http://" rel="noopener noreferrer">$kAI</a></button>
                                 </div>
                             </div>
                         </header>
@@ -80,18 +80,18 @@
                     <div class="grid-1">
                         <div class="gg-1">
                             <div class="typo-wrapper-1 d-flex flex-column text-center">
-                                <h1 class="display-2" data-aos="fade-up" data-aos-delay="600">Medium length hero
-                                    headline
-                                    goes&NonBreakingSpace;here</h1>
+                                <h1 class="display-2" data-aos="fade-up" data-aos-delay="600">Win Big with KOMAINU: The
+                                    Decentralized Betting Revolution</h1>
                                 <div class="p-wrapper d-flex justify-content-center">
-                                    <p class="" data-aos="fade-up" data-aos-delay="700">Lorem ipsum, dolor sit amet
-                                        consectetur adipisicing elit. Omnis voluptatem,
-                                        nesciunt accusamus placeat eaque quod!</p>
+                                    <p class="" data-aos="fade-up" data-aos-delay="700">KOMAINU is a decentralized
+                                        betting platform that allows users to earn decentralized assets through
+                                        responsible gambling. It is a chance to experience the latest technology in
+                                        crypto and bring its benefits to a wider audience.</p>
                                 </div>
 
                                 <div class="cta-button-3 cb-2 d-flex flex-row justify-content-center">
                                     <button class="btn-1" data-aos="fade-up" data-aos-delay="800"><a href="http://"
-                                            rel="noopener noreferrer">Buy</a></button>
+                                            rel="noopener noreferrer">Buy $kAI </a></button>
                                     <button class="btn-2" data-aos="fade-up" data-aos-delay="900"><a href="http://"
                                             rel="noopener noreferrer">Whitepaper</a></button>
                                 </div>
@@ -113,33 +113,30 @@
             <div class="page-2">
                 <div class="page-2-wrapper www">
                     <div class="f-wrapper py-5">
-                        <div class="fg-4 rounded-2 d-flex ff-flex flex-row align-items-center justify-content-center p-3 gap-3 "
+                        <div class="fg-4 rounded-2 d-flex ff-flex flex-row justify-content-center p-3 gap-3 "
                             data-scroll data-scroll-speed="1">
                             <div class="f-1 d-flex flex-column" data-scroll data-scroll-speed="1">
-                                <img class="f-icon" src="" alt="">
-                                <h1 class="display-7">Medium Length Section</h1>
+                                <i class="fa-solid fa-coins f-icon"></i>
+                                <h1 class="display-7 mt-1">Coin Toss</h1>
                                 <div class="p-wrapper-3">
-                                    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Incidunt totam quis
-                                    voluptates
-                                    dolorum voluptas. Odio.
+                                    Heads or Tails, Win or Lose with KOMAINU's 50/50 SkAI Coin Toss - Bet Verified Odds
+                                    and Double Your Tokens with a Win
                                 </div>
                             </div>
-                            <div class="f-2 d-flex flex-column" data-scroll data-scroll-speed="1.1">
-                                <img class="f-icon" src="" alt="">
-                                <h1 class="display-7">Medium Length Section</h1>
+                            <div class="f-2 d-flex flex-column" data-scroll data-scroll-speed="1">
+                                <i class="fa-solid fa-piggy-bank f-icon"></i>
+                                <h1 class="display-7 mt-1">High Stakes Lottery</h1>
                                 <div class="p-wrapper-3">
-                                    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Incidunt totam quis
-                                    voluptates
-                                    dolorum voluptas. Odio.
+                                    Get Lucky with KOMAINU's ETH Jackpot Lottery - Buy a Ticket for Just SkAI and Win
+                                    Big Every 12 Hours.
                                 </div>
                             </div>
-                            <div class="f-3 d-flex flex-column" data-scroll data-scroll-speed="1.2">
-                                <img class="f-icon" src="" alt="">
-                                <h1 class="display-7">Medium Length Section</h1>
+                            <div class="f-3 d-flex flex-column" data-scroll data-scroll-speed="1">
+                                <i class="fa-regular fa-life-ring f-icon"></i>
+                                <h1 class="display-7 mt-1">Roulette</h1>
                                 <div class="p-wrapper-3">
-                                    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Incidunt totam quis
-                                    voluptates
-                                    dolorum voluptas. Odio.
+                                    Spin to Win Big with KOMAINU's $kAI Roulette - Bet with $kAI or USDC, and Help Grow
+                                    the Reward Pool.
                                 </div>
                             </div>
                         </div>
@@ -150,26 +147,24 @@
             </div>
         </div>
 
-        <div class="page-2-www">
+        <div class="page-2-www about-graphic">
             <div class="page-3 py-5">
-                <div class="page-3-wrapper www">
+                <div class="page-3-wrapper www ">
                     <div class="about-wrapper d-flex flex-column justify-content-center align-items-center">
-                        <div class="about-flex text-center">
+                        <div class="about-flex text-center ">
                             <img data-scroll data-scroll-speed="1" class="komainu img-fluid"
                                 src="./assets/images/komainu.png" alt="">
                             <div class="p-wrapper-4">
-                                <p class="mb-0" data-scroll data-scroll-speed="2">
-                                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Saepe id totam eligendi
-                                    modi
-                                    illum, facere voluptatum error dicta. Ducimus numquam quod aut voluptatem id earum
-                                    aperiam quas minima maiores autem nobis accusamus eligendi iure omnis dolor
-                                    voluptates
-                                    ullam, quis adipisci.
-
-                                    <br><br>
-                                    Lorem ipsum dolor sit amet consectetur, adipisicing elit. Tenetur consequatur
-                                    quibusdam
-                                    dicta distinctio doloribus quo voluptates vero dolorum dolore laudantium.
+                                <p class="mb-0" data-scroll data-scroll-speed="1">
+                                    KOMAINU ($kAl) is a decentralized betting platform that was born with the aim of
+                                    enabling anyone to earn decentralized assets through responsible gambling.
+                                    <br><br>It is the product of a collaboration between optimistic players in the DeFi
+                                    space, and the KOMAINU team has noticed how crypto-based gaming remains an untapped
+                                    market with massive potential. <br><br>KOMAINIJ is more than just a gaming platform
+                                    on Ethereum; it is a prime opportunity to immerse yourself in the biggest
+                                    up-and-coming technology available. <br><br>Using social media platforms like
+                                    Telegram and A1 technology, KOMAINI_J ($kAI) will bring forward the very essence of
+                                    degen-gambling: decentralized, fair, seamless, and most of all, fun.
                                 </p>
                             </div>
                         </div>
@@ -177,58 +172,63 @@
 
                 </div>
             </div>
+        </div>
 
-            <div class="page-4 py-10">
-                <div class="page-4-wrapper www">
-                    <div class="page-4-wrapper-wrapper">
-                        <div class="tokenomics-wrapper bg-2 rounded-4 p-2" data-scroll data-scroll-speed="1">
-                            <div class="grid-2">
-                                <div class="t-2"><img src="./assets/images/tokenomics.png" alt="" class="img-fluid"
-                                        data-scroll data-scroll-speed="3">
-                                </div>
-                                <div class="t-3">
-                                    <h1 class="display-5 kamo-text mb-0" data-scroll data-scroll-speed="1">KamoInu Tokenomics
-                                    </h1>
-                                    <div class="t-3-wrapper d-flex flex-column">
-                                        <h1 data-scroll data-scroll-speed="1" class="display-7 supply">Total Supply:
-                                            50&NonBreakingSpace;000&NonBreakingSpace;000&NonBreakingSpace;$kAI </h1>
-                                        <div data-scroll data-scroll-speed="2"
-                                            class="ttk d-flex flex-row  gapping-2 align-items-center">
-                                            <div class="ttk-box-1"></div>
-                                            <li>Development & Marketing (30%)</li>
-                                        </div>
-                                        <div data-scroll data-scroll-speed="2"
-                                            class="ttk d-flex flex-row  gapping-2 align-items-center">
-                                            <div class="ttk-box-2"></div>
-                                            <li>Team Wallets (20%)</li>
-                                        </div>
 
-                                        <div data-scroll data-scroll-speed="2"
-                                            class="ttk d-flex flex-row  gapping-2 align-items-center">
-                                            <div class="ttk-box-3"></div>
-                                            <li>Giveaways (10%)</li>
-                                        </div>
+        <div class="page-8 mt-10 mb-0">
+            <div class="page-8-wrapper www">
+                <div class="grid-3 ">
+                    <div class="bad-1 bb-1 rounded-3 p-3 d-flex flex-column gap-1">
+                        <h1 class="display-5">
+                            KOMAINU Tokenomics
+                        </h1>
 
-                                        <div data-scroll data-scroll-speed="2"
-                                            class="ttk d-flex flex-row gapping-2 align-items-center">
-                                            <div class="ttk-box-4"></div>
-                                            <li>Airdrop Minigame (15%) </li>
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>
+                        <div class="grid-5">
+                            <div class="bk-1">Name:</div>
+                            <div class="bk-2">KOMOINU</div>
+                            <div class="bk-3">Ticker:</div>
+                            <div class="bk-4">$kAl</div>
+                            <div class="bk-5">Total Supply:</div>
+                            <div class="bk-6">10 000 000</div>
+                            <div class="bk-7">Max Emission:</div>
+                            <div class="bk-8">NO NEW TOKENS EVER BE MINTED</div>
                         </div>
+
+                    </div>
+                    <div class="bad-2 d-flex justify-content-around mt-3">
+
+                        <div class="blob-t-1 bbbb" data-scroll data-scroll-speed="10">
+                            <h1>2%</h1>
+                            <small>For Marketing</small>
+                        </div>
+
+
+                        <div class="blob-t-2 bbbb" data-scroll data-scroll-speed="10">
+                            <h1>1%</h1>
+                            <small>For Liquidity</small>
+                        </div>
+
+
+
+                        <div class="blob-t-3 bbbb" data-scroll data-scroll-speed="10">
+                            <h1>2%</h1>
+                            <small>For Reward Pool</small>
+                        </div>
+
+
                     </div>
                 </div>
             </div>
+        </div>
 
-            <div class="page-6 mt-5 mb-10 test">
+        <div class="about-graphic-2">
+            <div class="page-6 mb-10 test">
                 <div class="page-6-wrapper www">
                     <div class="whitepaper text-center">
                         <div class="kamo-typo d-flex flex-column align-items-center text-center">
-                            <h1 class="display-5" data-scroll data-scroll-speed="1">Kamowhitepaper</h1>
+                            <h1 class="display-5" data-scroll data-scroll-speed="1">Komowhitepaper</h1>
                             <div class="p-wrapper-7" data-scroll data-scroll-speed="1">
-                                <p>Check out our detailed Kamowhitepaper™ <br>to learn more about Kamoinu's inner
+                                <p>Check out our detailed Komowhitepaper™ <br>to learn more about Komoinu's inner
                                     workings.
                                 </p>
                             </div>
@@ -246,21 +246,25 @@
 
                 </div>
             </div>
+        </div>
 
-            <div class="page-5 fg-8 pt-2 pb-1">
-                <div class="page-5-wrapper www text-center">
-                    <div class="mb-1 footer-icons d-flex flex-row gapping justify-content-center align-items-center">
-                        <a href="http://" target="_blank" rel="noopener noreferrer"> <img
-                                src="./assets/images/icons/telegram.svg" alt="" srcset=""></a>
-                        <a href="http://" target="_blank" rel="noopener noreferrer"> <img
-                                src="./assets/images/icons/twitter.svg" alt="" srcset=""></a>
-                    </div>
-                    <small>Copyright © 2023 – KOMAINU | All Rights Reserved</small>
+        <div class="page-5 fg-8 pt-2 pb-1">
+            <div class="page-5-wrapper www text-center">
+                <div class="mb-1 footer-icons d-flex flex-row gapping justify-content-center align-items-center">
+                    <a href="http://" target="_blank" rel="noopener noreferrer"> <img
+                            src="./assets/images/icons/telegram.svg" alt="" srcset=""></a>
+                    <a href="http://" target="_blank" rel="noopener noreferrer"> <img
+                            src="./assets/images/icons/twitter.svg" alt="" srcset=""></a>
                 </div>
+                <small>Copyright © 2023 – KOMAINU | All Rights Reserved</small>
             </div>
         </div>
     </main>
 
+    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+    <script>
+        AOS.init();
+    </script>
 
     <!-- bootstrap -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
@@ -280,10 +284,6 @@
         );
     </script>
 
-    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
-    <script>
-        AOS.init();
-    </script>
 
 </body>
 
