--- a/index.html
+++ b/index.html
@@ -71,7 +71,10 @@
                                 </nav>
 
                                 <div class="cta-button" data-aos="fade-up" data-aos-delay="500">
-                                    <button class="btn-1"><a href="http://" rel="noopener noreferrer">$kAI</a></button>
+                                    <button class="btn-1"><a target="_blank"
+                                            href="
+                                        https://www.dextools.io/app/en/ether/pair-explorer/0x1551414cf587417bb887eb9575b4f4ace161d8ed"
+                                            rel="noopener noreferrer">Buy $kAI</a></button>
                                 </div>
                             </div>
                         </header>
@@ -90,9 +93,12 @@
                                 </div>
 
                                 <div class="cta-button-3 cb-2 d-flex flex-row justify-content-center">
-                                    <button class="btn-1" data-aos="fade-up" data-aos-delay="800"><a href="http://"
+                                    <button class="btn-1" data-aos="fade-up" data-aos-delay="800"><a
+                                            href="
+                                        https://www.dextools.io/app/en/ether/pair-explorer/0x1551414cf587417bb887eb9575b4f4ace161d8ed" target="_blank"
                                             rel="noopener noreferrer">Buy $kAI </a></button>
-                                    <button class="btn-2" data-aos="fade-up" data-aos-delay="900"><a href="http://"
+                                    <button class="btn-2" data-aos="fade-up" data-aos-delay="900"><a
+                                            href="./assets/komainuETH-whitepaper.pdf" download=""
                                             rel="noopener noreferrer">Whitepaper</a></button>
                                 </div>
                             </div>
@@ -147,9 +153,9 @@
             </div>
         </div>
 
-        <div class="page-2-www about-graphic">
+        <div class="page-2-www ">
             <div class="page-3 py-5">
-                <div class="page-3-wrapper www ">
+                <div class="page-3-wrapper www about-graphic">
                     <div class="about-wrapper d-flex flex-column justify-content-center align-items-center">
                         <div class="about-flex text-center ">
                             <img data-scroll data-scroll-speed="1" class="komainu img-fluid"
@@ -185,13 +191,13 @@
 
                         <div class="grid-5">
                             <div class="bk-1">Name:</div>
-                            <div class="bk-2">KOMOINU</div>
+                            <div class="bk-2">KOMAINU</div>
                             <div class="bk-3">Ticker:</div>
                             <div class="bk-4">$kAl</div>
                             <div class="bk-5">Total Supply:</div>
                             <div class="bk-6">10 000 000</div>
                             <div class="bk-7">Max Emission:</div>
-                            <div class="bk-8">NO NEW TOKENS EVER BE MINTED</div>
+                            <div class="bk-8">No New Tokens Ever Minted</div>
                         </div>
 
                     </div>
@@ -223,18 +229,19 @@
 
         <div class="about-graphic-2">
             <div class="page-6 mb-10 test">
-                <div class="page-6-wrapper www">
+                <div class="page-6-wrapper www about-graphic-2">
                     <div class="whitepaper text-center">
                         <div class="kamo-typo d-flex flex-column align-items-center text-center">
-                            <h1 class="display-5" data-scroll data-scroll-speed="1">Komowhitepaper</h1>
+                            <h1 class="display-5" data-scroll data-scroll-speed="1">KOMAwhitepaper</h1>
                             <div class="p-wrapper-7" data-scroll data-scroll-speed="1">
-                                <p>Check out our detailed Komowhitepaper™ <br>to learn more about Komoinu's inner
+                                <p>Check out our detailed KOMAwhitepaper™ <br>to learn more about KOMAinu's inner
                                     workings.
                                 </p>
                             </div>
 
                             <div class="cta-button-3" data-scroll data-scroll-speed="1">
-                                <button class="btn-1"><a href="http://" rel="noopener noreferrer">Checkout</a></button>
+                                <button class="btn-1"><a href="./assets/komainuETH-whitepaper.pdf" download=""
+                                        rel="noopener noreferrer">Checkout</a></button>
                             </div>
                         </div>
 
