--- a/index.html
+++ b/index.html
@@ -284,8 +284,9 @@
         let locoScroll;
         locoScroll = new LocomotiveScroll({
             el: document.querySelector("[data-scroll-container]"),
-            smooth: true,
+            smooth: true, smoothMobile: true
         });
+
         new ResizeObserver(() => locoScroll.update()).observe(
             document.querySelector("[data-scroll-container]")
         );
