--- a/index.html
+++ b/index.html
@@ -62,11 +62,9 @@
                             <div class="d-flex align-items-center flex-row gap-2 menu" data-aos="fade-up"
                                 data-aos-delay="200">
                                 <nav class="d-flex flex-row gap-1" data-aos="fade-up" data-aos-delay="300">
-                                    <li data-aos="fade-up" data-aos-delay="350"><a href="http://" target="_blank"
+                                    <li data-aos="fade-up" data-aos-delay="350"><a href="#socials" data-scroll-to="#socials"
                                             rel="noopener noreferrer">Socials</a></li>
-                                    <li data-aos="fade-up" data-aos-delay="400"><a href="http://" target="_blank"
-                                            rel="noopener noreferrer">Utility</a></li>
-                                    <li data-aos="fade-up" data-aos-delay="450"><a href="http://" target="_blank"
+                                    <li data-aos="fade-up" data-aos-delay="400"><a href="#tokenomics" data-scroll-to="#tokenomics" target="_blank"
                                             rel="noopener noreferrer">Tokenomics</a></li>
                                 </nav>
 
@@ -181,7 +179,7 @@
         </div>
 
 
-        <div class="page-8 mt-10 mb-0">
+        <div class="page-8 pt-10 mb-0" id="tokenomics">
             <div class="page-8-wrapper www">
                 <div class="grid-3 ">
                     <div class="bad-1 bb-1 rounded-3 p-3 d-flex flex-column gap-1">
@@ -255,12 +253,12 @@
             </div>
         </div>
 
-        <div class="page-5 fg-8 pt-2 pb-1">
+        <div class="page-5 fg-8 pt-2 pb-1" id="socials">
             <div class="page-5-wrapper www text-center">
                 <div class="mb-1 footer-icons d-flex flex-row gapping justify-content-center align-items-center">
-                    <a href="http://" target="_blank" rel="noopener noreferrer"> <img
+                    <a href="https://t.me/komainuERC" target="_blank" rel="noopener noreferrer"> <img
                             src="./assets/images/icons/telegram.svg" alt="" srcset=""></a>
-                    <a href="http://" target="_blank" rel="noopener noreferrer"> <img
+                    <a href="https://mobile.twitter.com/KOMAINUETH" target="_blank" rel="noopener noreferrer"> <img
                             src="./assets/images/icons/twitter.svg" alt="" srcset=""></a>
                 </div>
                 <small>Copyright © 2023 – KOMAINU | All Rights Reserved</small>
