--- a/index.html
+++ b/index.html
@@ -225,7 +225,7 @@
             </div>
         </div>
 
-        <div class="about-graphic-2">
+        <div class="">
             <div class="page-6 mb-10 test">
                 <div class="page-6-wrapper www about-graphic-2">
                     <div class="whitepaper text-center">
