--- a/index.html
+++ b/index.html
@@ -280,21 +280,13 @@
     https://cdn.jsdelivr.net/npm/locomotive-scroll@4.1.4/dist/locomotive-scroll.min.js
     "></script>
     <script>
-        const locoScroll = new LocomotiveScroll({
-            el: scroller,
+        let locoScroll;
+        locoScroll = new LocomotiveScroll({
+            el: document.querySelector("[data-scroll-container]"),
             smooth: true,
-            smartphone: {
-                breakpoint: 0,
-                smooth: true,
-                lerp: 0.8,
-                getSpeed: true,
-            },
             tablet: {
-                breakpoint: 0,
-                smooth: true,
-                lerp: 0.8,
-                getSpeed: true,
-            },
+                breakpoint: 0,    // <---- Fixes The Issue 🎉
+            }
         });
 
         new ResizeObserver(() => locoScroll.update()).observe(
