--- a/index.html
+++ b/index.html
@@ -4,16 +4,42 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name = "viewport" content = "width=device-width, minimum-scale=1.0, maximum-scale = 1.0, user-scalable = no">
 
     <!-- *Tags -->
     <!-- Primary Meta Tags -->
-    <title>Your title here</title>
-    <meta name="title" content="Your title here">
-    <meta name="description" content="The Description">
+    <title>KOMAINU | The Decentralized Betting Revolution</title>
+    <meta name="title" content="KOMAINU | The Decentralized Betting Revolution">
+    <meta name="description" content="KOMAINU is a decentralized
+                                        betting platform that allows users to earn decentralized assets through
+                                        responsible gambling. It is a chance to experience the latest technology in
+                                        crypto and bring its benefits to a wider audience.">
+
     <meta name="author" content="kochikuko">
     <meta name="robots" content="index, follow">
     <meta name="copyright" content="Copyright © 2023 – KOMAINU | All Rights Reserved">
+
+    <!-- Open Graph / Facebook -->
+    <meta property="og:type" content="website">
+    <meta property="og:url" content="https://komainu.live/">
+    <meta property="og:title" content="KOMAINU | The Decentralized Betting Revolution">
+    <meta property="og:description" content="KOMAINU is a decentralized
+                                        betting platform that allows users to earn decentralized assets through
+                                        responsible gambling. It is a chance to experience the latest technology in
+                                        crypto and bring its benefits to a wider audience.">
+    <meta property="og:image"
+        content="https://github.com/Kochikuko/komainu/blob/main/cover.png?raw=true">
+
+    <!-- Twitter -->
+    <meta property="twitter:card" content="summary_large_image">
+    <meta property="twitter:url" content="https://komainu.live/">
+    <meta property="twitter:title" content="KOMAINU | The Decentralized Betting Revolution">
+    <meta property="twitter:description" content="KOMAINU is a decentralized
+                                        betting platform that allows users to earn decentralized assets through
+                                        responsible gambling. It is a chance to experience the latest technology in
+                                        crypto and bring its benefits to a wider audience.">
+    <meta property="twitter:image"
+        content="https://github.com/Kochikuko/komainu/blob/main/cover.png?raw=true">
 
     <!-- need meta.io -->
 
